app/assets/stylesheets/buttons.css
button{
  font-family: 'Press Start 2P' , sans-serif;
  padding: 0 10px;
  background-color: #f90;
  border: 0;
  color: black;
  text-decoration: none;
  font-size: 1em;
  border-radius: 5px;
  height:70px;
  margin: 0 auto;
  margin-top:10px;
  width: 100%;
}
button:hover{
  background-color: #f90;
  color: white;
}
.answer-button{
  border: 0;
  opacity: 0.9;
  color: #DDD;
  background-color: #D00;
  font-size: .8em;
  width:360px;
  min-height: 100px;
  white-space: nowrap;
  margin: 10px;
  display: inline-block;
  padding: 10px;
}
.answer-button:hover{
  opacity: 1;
  background-color: #F00;
  cursor: pointer;
}
.gamequestions{
  width: 800px;
  text-align: center;
  margin: 0 auto 20px auto;
}
#start-game{
  text-align: center;
}
#search-button{
  height: 30px;
  line-height: 30px;
}
#start{
  text-align: center;
  margin: 80px auto 0 auto;
  color: black;
  font-weight: 400;
  font-size: 3.5em;

  background-color: #ff9900;
  opacity: 0.95;
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 0;
  box-shadow: 0px 0px 10px 0px #000;
  display: none;
  /*margin-top: 0;*/
}
#start:hover {
  cursor: pointer;
}
#loading{
  text-align: center;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0;
  margin: auto;
  color: black;
  font-weight: 400;
  font-size: 3.5em;
  left:0;
  background-color: #ff9900;
  opacity: 0.95;
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 0;
  box-shadow: 0px 0px 10px 0px #000;
  display: none;
  /*margin-top: 0;*/
}
.fa-play:before {
  content: "\f04b";
  position: relative;
  right: -5px;
}
.fa-stack:hover {
  color: white;
}

